<resources>
    <string name="app_name">Multi Download Manager</string>
     <string name="download">Download</string>
    <string name="enterUrl">Enter Link</string>
    <string name="showDownloads">Show Downloads</string>
    <string name="enterLinkWarn">you must enter link of download</string>
    <string name="invalidLINK">Invalid LINK</string>
    <string name="noInternetConnection">no internet connection</string>
    <string name="loading">Loading&#8230;</string>
    <string name="alert">attention</string>
    <string name="ok">ok</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="downloadOf">Download of :</string>
    <string name="completed">completed</string>
    <string name="downloadError">Download Error</string>
    <string name="emptylist">empty list</string>
    <string name="progress">Progress</string>
    <string name="downloadComplete">Download complete</string>
    <string name="downloadPaused">Downloading paused</string>
    <string name="downloading">Downloading</string>
    <string name="foundBefore">already in list of dowwnloads</string>
    <string name="settings">Settings</string>
    <string name="license">License</string>
     <string name="setDirTitle">Directory Location</string>
    <string name="setDirSummary">Set Directory Location</string>
    <string name="prefsDirectoryLocation">prefsDirectoryLocation</string>
    <string name="notfindappsuitable">no apps can open this link</string>
    <string name="licenseText1">This project is open source , you can find the code at</string>
    <string name="licenseText2">https://github.com/omar-adel/MultiDownloadManager</string>
    <string name="licenseText3">This project is Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</string>
    <string name="licenseText4">And Thanks to :</string>
    <string name="licenseText5">https://github.com/Aspsine/MultiThreadDownload</string>
    <string name="licenseText6">I used this Repository in this app
        as MultiDownload Module and modified it
    </string>


</resources>
