<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <include android:id="@+id/rlToolBar"
            layout="@layout/top_bar"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/rlToolBar"
            android:layout_marginTop="@dimen/medium_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginRight="@dimen/small_margin"
                android:layout_marginLeft="@dimen/small_margin"
                >

                <omar.apps923.downloadmanager.GUI.CustomTextView
                    android:id="@+id/txtvLicense1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:text="@string/licenseText1"
                     />

                <omar.apps923.downloadmanager.GUI.CustomTextView
                    android:id="@+id/txtvLicense2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/licenseText2"
                   android:layout_marginTop="@dimen/small_margin"
                    />

                <omar.apps923.downloadmanager.GUI.CustomTextView
                    android:id="@+id/txtvLicense3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:text="@string/licenseText3"
                    android:layout_marginTop="@dimen/small_margin"
                    />

                <omar.apps923.downloadmanager.GUI.CustomTextView
                    android:id="@+id/txtvLicense4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:text="@string/licenseText4"
                    android:layout_marginTop="@dimen/medium_margin"
                    />

                <omar.apps923.downloadmanager.GUI.CustomTextView
                    android:id="@+id/txtvLicense5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/licenseText5"
                    android:layout_marginTop="@dimen/small_margin"
                    />


                <omar.apps923.downloadmanager.GUI.CustomTextView
                    android:id="@+id/txtvLicense6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:text="@string/licenseText6"
                    android:layout_marginTop="@dimen/small_margin"
                    />

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</layout>